<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/llmain"
    android:orientation="vertical"
    android:gravity="center"
    tools:context=".MainActivity">

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtWeight"
        android:hint="@string/hint_wt"
        android:textStyle="bold"
        android:ems="12"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="Autofill">
    </EditText>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtHeightFt"
        android:hint="@string/hint_htFt"
        android:ems="12"
        android:textStyle="bold"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="Autofill">
    </EditText>
    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edtHeightIn"
        android:hint="@string/hint_htIn"
        android:ems="12"
        android:textStyle="bold"
        android:inputType="number"
        android:textSize="20sp"
        tools:ignore="Autofill">
    </EditText>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/btnCalculate"
        android:text="@string/btn1"
        android:layout_marginTop="15dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/txtResult"
        android:ems="12"
        android:text="@string/textResult"
        android:textStyle="bold"
        android:textSize="25sp"
        android:layout_marginTop="15dp"
        android:gravity="center"/>






</LinearLayout>