<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#05CDEC"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SecondActivity">
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:id="@+id/txtName"
        android:textSize="32sp"
        android:textStyle="bold"
        android:textColor="#fff">

    </TextView>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom"
        android:layout_marginTop="200dp">
        <Button

            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnTranslate"
            android:text="@string/btn3"
            android:textColor="@color/white"
            android:backgroundTint="#05ECCC">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRotate"
            android:text="@string/btn4"
            android:backgroundTint="#0091EA"
            android:layout_weight="1">

        </Button>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="bottom">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/btnScale"
            android:text="@string/btn5"
            android:textColor="@color/white"
            android:backgroundTint="#05ECCC">

        </Button>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnAlpha"
            android:text="@string/btn6"
            android:backgroundTint="#0091EA"
            android:layout_weight="1">

        </Button>

    </LinearLayout>

</LinearLayout>